Main fuctions with API to get data

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     </header>
     <main>
       <section class="location">
-        <div class="city">Northampton, GB</div>
-        <div class="date">Thursday 10 January 2020</div>
+        <div class="city">Zlín, CZE</div>
+        <div class="date">Thursday, 20 February 2021</div>
       </section>
       <div class="current">
-        <div class="temp">15<span>°c</span></div>
-        <div class="weather">Sunny</div>
-        <div class="hi-low">13°c / 16°c</div>
+        <div class="temp">5<span>°c</span></div>
+        <div class="weather">Rain</div>
+        <div class="hi-low">2°c | 6°c</div>
+        <div class="hi-low-text">Low High</div>
       </div>
     </main>
   </div>
