--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
         <div class="date">Thursday, 20 February 2021</div>
       </section>
       <div class="current">
-        <div class="temp">5<span>°c</span></div>
-        <div class="weather">Rain</div>
+        <div class="temp">4<span>°c</span></div>
+        <div class="weather">Clouds</div>
         <div class="hi-low">2°c | 6°c</div>
-        <div class="hi-low-text">
-          <label>Low </label>
-          <label>  High</label>
-        </div>
+        <div class="hi-low-text">Low | High</div>
       </div>
     </main>
   </div>
