Adding star to favourites cities

--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
     </header>
     <main>
       <section class="location">
-        <div class="city">Zlín, CZE</div>
-        <div class="date">Thursday, 20 February 2021</div>
+        <div class="city">City, State</div>
+        <div class="date">Thursday, Day-Month-Year</div>
       </section>
       <div class="current">
-        <div class="temp">4<span>°c</span></div>
-        <div class="weather">Clouds</div>
-        <div class="hi-low">2°c | 6°c</div>
+        <div class="temp">Temp<span>°c</span></div>
+        <div class="weather">Stav</div>
+        <div class="hi-low">Low-High</div>
         <div class="hi-low-text">Low | High</div>
+      </div>
+      <div class="favourites">
+        <div class="favouriteCities">
+          Vsetín, CZ
+        </div>
+        <div class="favouriteStar">
+           <button id="star-five">Favorite</button>
+        </div>
       </div>
     </main>
   </div>
