Adding new bg, css improving

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     </header>
     <main>
       <section class="location">
-        <div class="city">City, State</div>
-        <div class="date">Thursday, Day-Month-Year</div>
+        <div class="city">Nothing to see here...yet!</div>
+        <div class="date"></div>
       </section>
       <div class="current">
-        <div class="temp">Temp<span>°c</span></div>
-        <div class="weather">Stav</div>
-        <div class="hi-low">Low-High</div>
+        <div class="temp"><span></span></div>
+        <div class="weather"></div>
+        <div class="hi-low"></div>
         <div class="hi-low-text">Low | High</div>
       </div>
       <div class="favourites">
         <div class="favouriteCities">
-          Vsetín, CZ
+          Favourite City...
         </div>
         <div class="favouriteStar">
-           <button id="star-five">Favorite</button>
+           <button id="star-five"><img src="star-transparent.png"></button>
         </div>
       </div>
     </main>
