Positioning for star icon

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="hi-low-text">Low | High</div>
       </div>
       <div class="favourites">
+        <div class="favouriteStar">
+          <button id="star-five"><img src="star-fill.png"></button>
+       </div>
         <div class="favouriteCities">
           Favourite City...
-        </div>
-        <div class="favouriteStar">
-           <button id="star-five"><img src="star-transparent.png"></button>
         </div>
       </div>
     </main>
