Icons/Pics folders and new divs for icons

--- a/index.html
+++ b/index.html
@@ -20,12 +20,19 @@
       <div class="current">
         <div class="temp"><span></span></div>
         <div class="weather"></div>
-        <div class="hi-low"></div>
-        <div class="hi-low-text">Low | High</div>
+        <div class="hi-low">
+          <div class="highTemp">
+            High...
+          </div>
+          <img id="up-down-narrows" src="Icons/up-down.png">
+          <div class="lowTemp">
+            Low...
+          </div>
+        </div>
       </div>
       <div class="favourites">
         <div class="favouriteStar">
-          <button id="star-five"><img src="star-fill.png"></button>
+          <button id="star-five"><img src="Icons/star-fill.png"></button>
        </div>
         <div class="favouriteCities">
           Favourite City...
