Arrows in row, condition in wrong city not working

--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
         <div class="temp"><span></span></div>
         <div class="weather"></div>
         <div class="hi-low">
-          <div class="highTemp">
-            High...
-          </div>
-          <img id="up-down-narrows" src="Icons/up-down.png">
           <div class="lowTemp">
-            Low...
+          </div>
+          <img id="up-down-narrows" src="Icons/up-down-arrow.svg">
+          <div class="highTemp">
           </div>
         </div>
       </div>
